syntax = "proto3";

package dfs;

option go_package = "pkg/proto";

import "google/protobuf/timestamp.proto";

// Common data structures
message FileInfo {
  string path = 1;
  int64 size = 2;
  int32 chunk_count = 3;
  repeated ChunkInfo chunks = 4;
  google.protobuf.Timestamp created_at = 5;
  string checksum = 6;
}

message ChunkInfo {
  string id = 1;
  int64 size = 2;
  repeated DataNodeInfo replicas = 3;  // DataNodes storing this chunk
  string checksum = 4;
}

message DataNodeInfo {
  string id = 1;
  string ip_address = 2;
  int32 port = 3;
  int64 capacity = 4;
  int64 used = 5;
  NodeStatus status = 6;
  google.protobuf.Timestamp last_seen = 7;
}

message HealthStatus {
  NodeStatus status = 1;
  google.protobuf.Timestamp last_seen = 2;
}

enum NodeStatus {
  NODE_HEALTHY = 0;
  NODE_DEGRADED = 1;
  NODE_UNHEALTHY = 2;
}